--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Trip Albania - Coming Soon</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/coming_soon/logo.png" type="image/png">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
